--- a/gradients.scss
+++ b/gradients.scss
@@ -9,18 +9,13 @@ body {
     width: 80vw;
     height: 70vh;
     margin: 50px auto;
+    text-align: center;
+    padding-top: 2%;
 }
 
 #Linear-Gradient {
-    // background-image: linear-gradient(45deg,red 10%, white, purple);
-
-
-
-    text-align: center;
-    padding-top: 2%;
-    
-//    background-image: repeating-linear-gradient(red 10%, white 20%, purple 80%);
-    
+    background-image: linear-gradient(45deg,red 10%, white, purple);
+    //background-image: repeating-linear-gradient(red 10%, white 20%, purple 80%);  
 }
 
 
